Added readme and license files and fixed example.ini

--- a/example.ini
+++ b/example.ini
@@ -3,7 +3,7 @@ width=800
 height=600
 
 jobsize=100000
-jobs=10000
+jobs=1000
 threads=6
 
 statefile=example.state
@@ -12,8 +12,8 @@ iter0=20
 iter1=200
 iter2=2000
 
-color0=ff0000
+color0=000088
 color1=00ff00
-color2=0000ff
+color2=ff0000
 
 output=example.bmp
